# desktop-os-style

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
desktop/: background.cpp  background.h  datetimecontroller.cpp  datetimecontroller.h  desktop.cpp  desktop.h  desktopwindows.cpp  desktopwindows.h  imguielement.cpp  imguielement.h  powermenu.cpp  powermenu.h  process.cpp  process.h  taskbar.cpp  taskbar.h  taskmanager.cpp  taskmanager.h  windows.cpp  windows.h
resources/: config.txt
src/: main.cpp
